<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="fragment"
            type="com.readlab.readlight.presentation.ui.onboard.fragment.start.StartFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="240dp"
            android:contentDescription="@string/text_logo"
            android:src="@drawable/ic_readlight_white_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:theme="@style/BaseButton"
            android:id="@+id/startWithKakaoButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/shape_round_kakao"
            android:onClick="@{() -> fragment.startWithKakao()}"
            app:layout_constraintBottom_toTopOf="@id/startWithEmailButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:background="#00000000"
                android:contentDescription="@string/text_kakao_logo"
                android:src="@drawable/ic_kakao_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="#00000000"
                android:includeFontPadding="false"
                android:text="@string/text_start_with_kakao"
                android:textColor="#000000"
                android:textSize="16sp" />

        </LinearLayout>

        <Button
            android:theme="@style/BaseButton"
            android:id="@+id/startWithEmailButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="180dp"
            android:background="@drawable/shape_round"
            android:onClick="@{() -> fragment.startWithEmail()}"
            android:text="@string/text_start_with_email"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/loginWithEmailButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="36dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_already_have_account"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:theme="@style/BaseText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/noto_bold"
                android:onClick="@{() -> fragment.loginWithEmail()}"
                android:text="@string/text_login_with_email"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:theme="@style/BaseText" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
