<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.readlab.readlight.presentation.ui.signup.SignUpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="24dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/noto_bold"
                android:includeFontPadding="false"
                android:text="@string/text_sign_up"
                android:textColor="#000000"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/noto_medium"
                    android:includeFontPadding="false"
                    android:text="@string/text_email"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/emailEdit"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="8dp"
                    android:autofillHints="@string/hint_pls_write_email"
                    android:background="@drawable/shape_round_edit"
                    android:fontFamily="@font/noto_regular"
                    android:hint="@string/hint_pls_write_email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="14dp"
                    android:paddingEnd="14dp"
                    android:text="@={vm.userQuery.email}"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/noto_medium"
                    android:includeFontPadding="false"
                    android:text="@string/text_password"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/passwordEdit"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="8dp"
                    android:autofillHints="@string/hint_pls_write_password"
                    android:background="@drawable/shape_round_edit"
                    android:fontFamily="@font/noto_regular"
                    android:hint="@string/hint_pls_write_password"
                    android:inputType="textPassword"
                    android:paddingStart="14dp"
                    android:paddingEnd="14dp"
                    android:text="@={vm.userQuery.password}"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/noto_medium"
                    android:includeFontPadding="false"
                    android:text="@string/text_phone"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/phoneNumberEdit"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="8dp"
                    android:autofillHints="@string/hint_pls_write_email"
                    android:background="@drawable/shape_round_edit"
                    android:fontFamily="@font/noto_regular"
                    android:hint="@string/hint_pls_write_phone"
                    android:inputType="phone"
                    android:paddingStart="14dp"
                    android:paddingEnd="14dp"
                    android:text="@={vm.userQuery.phone}"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/noto_medium"
                    android:includeFontPadding="false"
                    android:text="@string/text_name"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/nameEdit"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="8dp"
                    android:autofillHints="@string/hint_pls_write_email"
                    android:background="@drawable/shape_round_edit"
                    android:fontFamily="@font/noto_regular"
                    android:hint="@string/hint_pls_write_name"
                    android:inputType="textEmailAddress"
                    android:paddingStart="14dp"
                    android:paddingEnd="14dp"
                    android:text="@={vm.userQuery.name}"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

        <com.clean.custom.LitButton
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="40dp"
            android:text="@string/text_sign_up"
            android:theme="@style/BaseButton"
            app:able="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
