<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.readlab.readlight.domain.repositories.LogInQuery" />

        <variable
            name="vm"
            type="com.readlab.readlight.presentation.ui.onboard.fragment.login.LogInViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="70dp"
                android:layout_marginEnd="24dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/noto_bold"
                    android:includeFontPadding="false"
                    android:text="@string/text_login"
                    android:textColor="#000000"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="100dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/noto_medium"
                        android:includeFontPadding="false"
                        android:text="@string/text_email"
                        android:textSize="16sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/emailInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginTop="8dp"
                        android:padding="0dp"
                        app:errorEnabled="true"
                        app:hintEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/emailEdit"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:autofillHints="@string/hint_pls_write_email"
                            android:background="@drawable/shape_round_edit"
                            android:fontFamily="@font/noto_regular"
                            android:hint="@string/hint_pls_write_email"
                            android:inputType="textEmailAddress"
                            android:paddingStart="14dp"
                            android:paddingEnd="14dp"
                            android:text="@={vm.email}"
                            android:textSize="16sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/noto_medium"
                        android:includeFontPadding="false"
                        android:text="@string/text_password"
                        android:textSize="16sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/passwordInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginTop="8dp"
                        android:padding="0dp"
                        app:endIconMode="password_toggle"
                        app:errorEnabled="true"
                        app:hintEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/passwordEdit"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:autofillHints="@string/hint_pls_write_password"
                            android:background="@drawable/shape_round_edit"
                            android:fontFamily="@font/noto_regular"
                            android:hint="@string/hint_pls_write_password"
                            android:inputType="textPassword"
                            android:paddingStart="14dp"
                            android:paddingEnd="14dp"
                            android:text="@={vm.password}"
                            android:textSize="16sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/forgetPasswordButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_gravity="end"
                        android:fontFamily="@font/noto_medium"
                        android:includeFontPadding="false"
                        android:text="@string/text_forget_password"
                        android:textAlignment="viewEnd"
                        android:textSize="16sp" />

                    <com.clean.custom.LitButton
                        android:id="@+id/logInButton"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="36dp"
                        android:padding="18dp"
                        android:text="@string/text_login"
                        android:theme="@style/BaseButton"
                        android:layout_gravity="center_horizontal"
                        app:able="@{LogInQuery.isValid(vm.email, vm.password)}"
                        app:initialCornerAngle="60dp"
                        app:spinning_bar_color="#FFFFFFFF"
                        app:spinning_bar_padding="5dp"
                        app:spinning_bar_width="5dp" />

                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:id="@+id/signUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="36dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_do_not_have_account"
                android:textColor="@color/blueGray"
                android:textSize="16sp"
                android:theme="@style/BaseText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/noto_bold"
                android:text="@string/text_sign_up"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:theme="@style/BaseText" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
